--- a/ansible-playbook.yml
+++ b/ansible-playbook.yml
@@ -55,7 +55,7 @@
   handlers:
     - name: Configura crontab
       shell: "crontab {{ ansible_facts.user_dir }}/src/Cronfile"
-      become: yeConfigura crontabs
+      become: yes
     - name: Reinicia servidor
       reboot:
       become: yes
