--- a/ansible-playbook.yml
+++ b/ansible-playbook.yml
@@ -42,10 +42,15 @@
         append: yes
       become: yes
       notify: Reinicia servidor
+    - name: Copia credenciales
+      copy:
+        src: ~/.vault
+        dest: "{{ ansible_facts.user_dir }}"
     - name: Copia los archivos de código
       copy:
         src: src
         dest: "{{ ansible_facts.user_dir }}"
+        mode: +x
       notify: Configura crontab
     - name: Crea directorio para guardar logs
       file:
