--- a/ansible-playbook.yml
+++ b/ansible-playbook.yml
@@ -1,5 +1,5 @@
 ---
-- hosts: islasgeci
+- hosts: islasgeci.org
   tasks:
     - name: Configura huso horario
       timezone:
@@ -52,11 +52,6 @@
         dest: "{{ ansible_facts.user_dir }}"
         mode: +x
       notify: Configura crontab
-    - name: Crea directorio para guardar logs
-      file:
-        path: "{{ ansible_facts.user_dir }}/var/log"
-        state: directory
-        recurse: yes
   handlers:
     - name: Configura crontab
       shell: "crontab {{ ansible_facts.user_dir }}/src/Cronfile"
@@ -65,7 +60,7 @@
       reboot:
       become: yes
 
-- hosts: islasgeci
+- hosts: islasgeci.org
   tasks:
     - name: Prueba Docker
       docker_container:
